libdmotservices-c: equalizer with examples and unit tests

--- a/libdmotservices/c/linux/Makefile
+++ b/libdmotservices/c/linux/Makefile
@@ -27,16 +27,7 @@ DEPS	:= $(OBJ:.o=.d)
 
 
 prebuild:
-	@echo
-	@echo "████   ███  █████         █████                           █████                                            ███                       "
-	@echo "░░███  ░░░  ░░███         ░░███                           ░░███                                            ░░░                            "
-	@echo " ░███  ████  ░███████   ███████  █████████████    ██████  ███████    █████   ██████  ████████  █████ █████ ████   ██████   ██████   █████ "
-	@echo " ░███ ░░███  ░███░░███ ███░░███ ░░███░░███░░███  ███░░███░░░███░    ███░░   ███░░███░░███░░███░░███ ░░███ ░░███  ███░░███ ███░░███ ███░░  "
-	@echo " ░███  ░███  ░███ ░███░███ ░███  ░███ ░███ ░███ ░███ ░███  ░███    ░░█████ ░███████  ░███ ░░░  ░███  ░███  ░███ ░███ ░░░ ░███████ ░░█████ "
-	@echo " ░███  ░███  ░███ ░███░███ ░███  ░███ ░███ ░███ ░███ ░███  ░███ ███ ░░░░███░███░░░   ░███      ░░███ ███   ░███ ░███  ███░███░░░   ░░░░███"
-	@echo " █████ █████ ████████ ░░████████ █████░███ █████░░██████   ░░█████  ██████ ░░██████  █████      ░░█████    █████░░██████ ░░██████  ██████ "
-	@echo "░░░░░ ░░░░░ ░░░░░░░░   ░░░░░░░░ ░░░░░ ░░░ ░░░░░  ░░░░░░     ░░░░░  ░░░░░░   ░░░░░░  ░░░░░        ░░░░░    ░░░░░  ░░░░░░   ░░░░░░  ░░░░░░  "
-	@echo
+	cat libdmotservices.logo
 	mkdir -p "$(BIN_DIR)"
 	mkdir -p "$(LOG_DIR)"
                                                                                                                                           
@@ -55,7 +46,7 @@ $(LIB): $(OBJ)
 	$(CC) $(CFLAGS) $(CPPFLAGS) -c $< -o $@
 
 # auto-include header dependencies
-include $(DEPS)
+#include $(DEPS)
 
 #####################################################################################
 ## builds the test cases
@@ -115,7 +106,9 @@ example-demo: examples
 ## housekeeping
 #####################################################################################
 clean:
-	$(RM) $(BIN_DIR)/* $(LOG_DIR)/* $(OBJ) $(LIB) $(TEST_BINS) $(EX_BINS)
+	$(RM) $(BIN_DIR)/* $(LOG_DIR)/* $(OBJ) $(LIB) $(DEPS) $(TEST_BINS) $(EX_BINS)
+	find examples -name "*.d" -exec $(RM) {} \;
+	find tests -name "*.d" -exec $(RM) {} \;
 
 ## prevents these targets from being treated as file names
 .PHONY: all tests test clean examples example-demo
