--- a/libdmotservices/java/dmot-servlet-javax/pom.xml
+++ b/libdmotservices/java/dmot-servlet-javax/pom.xml
@@ -15,10 +15,10 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
     <build>
-        <testSourceDirectory>src/test</testSourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>${project.basedir}/src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
