--- a/wifiequ/linux/etc/systemd/system/wifiequd.service
+++ b/wifiequ/linux/etc/systemd/system/wifiequd.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/wifiequd --port 8080
+ExecStart=/usr/local/bin/wifiequd --mock --port 8080
 Restart=on-failure
 User=wifiequ
 Group=wifiequ
