WiFiEqu reads options from /etc/wifiequd.conf; mutexes in the threads to prevent data races; breaking changes as some functions prefixed to stay in namespace

--- a/libdmotservices/Makefile
+++ b/libdmotservices/Makefile
@@ -109,7 +109,7 @@ example-demo: examples
 
 
 #####################################################################################
-## housekeeping
+## Housekeeping
 #####################################################################################
 clean:
 	@$(MILESTONE) "Removing previous builds..."
