--- a/wifiequ/linux/etc/systemd/system/wifiequd.service
+++ b/wifiequ/linux/etc/systemd/system/wifiequd.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/local/bin/wifiequd --mock --port 8080
+ExecStart=/usr/local/bin/wifiequd
 Restart=on-failure
 User=wifiequ
 Group=wifiequ
@@ -23,8 +23,9 @@ LockPersonality=yes
 MemoryDenyWriteExecute=yes
 RestrictRealtime=yes
 RestrictSUIDSGID=yes
-RestrictAddressFamilies=AF_UNIX AF_NETLINK
+RestrictAddressFamilies=AF_UNIX AF_NETLINK AF_INET AF_INET6
 IPAddressDeny=any
+IPAddressAllow=localhost
 RuntimeDirectory=wifiequ
 RuntimeDirectoryMode=0750
 UMask=007
