wired up the wi-fi scanner to the daemon which can now publish readings from a live source; documentation updated and more navigation links added

--- a/wifiequ/linux/etc/wifiequd.conf
+++ b/wifiequ/linux/etc/wifiequd.conf
@@ -8,6 +8,9 @@ mock=1
 ## HTTP port, e.g. http.port=8080
 http.port=8080
 
+## WLAN interface, e.g. interface=wlan0
+interface=wlan0
+
 ## Frequency ranges taken from:
 ## https://en.wikipedia.org/wiki/List_of_WLAN_channels
 
