Draft of WiFiEqu API specification; versioning in libdmotservices extend with major, minor, and patch functions as well as the equivalent Java class and methods; unit tests for versioning provided for Java and C

--- a/libdmotservices/java/dmot-core/pom.xml
+++ b/libdmotservices/java/dmot-core/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
     <build>
-        <testSourceDirectory>${project.basedir}/src/test</testSourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
         <testResources>
             <testResource>
                 <directory>${project.basedir}/src/test/resources</directory>
