--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ build/
 **/bin/
 **/log/
 **/logs/
+**/node_modules#/
 **/.sync*
 **/*.a
 **/*.d
@@ -54,6 +55,8 @@ build/
 **/access.token
 **/connection.properties
 **/connection*.properties
+**/package.json
+**/package-lock.json
 **/Thumbs.db*
 build.bat
 build.cmd
