GET /api/v1/channels endpoint active; JSON logging in the daemon configurable; authentication marked as future work

--- a/wifiequ/linux/etc/wifiequd.conf
+++ b/wifiequ/linux/etc/wifiequd.conf
@@ -62,3 +62,6 @@ ch165=5815-5835
 ch169=5835-5855
 ch173=5855-5875
 ch177=5875-5895
+
+## JSON logging in the daemon enabled/disabled, e.g. log.daemon.json=1
+log.daemon.json=1
