--- a/wifiequ/linux/etc/wifiequd.conf
+++ b/wifiequ/linux/etc/wifiequd.conf
@@ -11,6 +11,9 @@ http.port=8080
 ## WLAN interface, e.g. interface=wlan0
 interface=wlan0
 
+## Delay in milliseconds between each published sample, e.g. refresh.millis=500
+refresh.millis=500
+
 ## Frequency ranges taken from:
 ## https://en.wikipedia.org/wiki/List_of_WLAN_channels
 
