--- a/wifiequ/linux/etc/wifiequd.conf
+++ b/wifiequ/linux/etc/wifiequd.conf
@@ -14,6 +14,9 @@ interface=wlan0
 ## Delay in milliseconds between each published sample, e.g. refresh.millis=500
 refresh.millis=500
 
+## Endpoint shared secrets. "make install" replaces the ACCESS_TOKEN_STATS placeholder with a 32 character access token.
+access.token.stats=@@ACCESS_TOKEN_STATS@@
+
 ## Frequency ranges taken from:
 ## https://en.wikipedia.org/wiki/List_of_WLAN_channels
 
