sets JAVA_HOME in master build

--- a/wifiequ/linux/Makefile
+++ b/wifiequ/linux/Makefile
@@ -98,7 +98,7 @@ $(TEST_BINS): %: %.c
 	@$(MILESTONE) "Linking core objects and libraries to produce test binaries..."
 	$(CC) $(CFLAGS) $(CPPFLAGS) $(CORE_OBJ) -o $@ $< $(ARCHIVE) $(LDLIBS) $(LDLIBS_TEST)
 	@chmod +x "$@";
-	@[ ! "$@" ] || mv -v "$@" "$(BIN_DIR)";
+	@[ ! "$@" ] || mv -vf "$@" "$(BIN_DIR)";
 
 tests: $(TEST_BINS)
 
@@ -111,7 +111,7 @@ test: tests
 			echo "$(ANSI_RESET)$(ANSI_RED)ERROR: At least one unit test failed.$(ANSI_RESET)"; \
 			exit 1; \
 	fi
-	@find -name "*.log" -not -path "**/logs/*" -exec mv -v "{}" "$(LOG_DIR)" \;;
+	@find -name "*.log" -not -path "**/logs/*" -exec mv -vf "{}" "$(LOG_DIR)" \;;
 
 
 #####################################################################################
@@ -125,7 +125,7 @@ $(EX_BINS): %: %.c
 	$(CC) $(CFLAGS) $(CPPFLAGS) $(CORE_OBJ) -o $@ $< $(ARCHIVE) $(LDLIBS)
 	@if [ -f "$@" ]; then \
 		chmod +x "$@"; \
-		mv -v "$@" "$(BIN_DIR)"; \
+		mv -vf "$@" "$(BIN_DIR)"; \
 	fi
 
 examples: $(EX_BINS)
@@ -134,7 +134,7 @@ examples: $(EX_BINS)
 example-demo: examples
 	@set -e; \
 	find "$(BIN_DIR)" -name "ex_*" -exec sh -c 'chmod +x "$$1" && "$$1"' _ {} \;;
-	@find -name "*.log" -not -path "**/logs/*" -exec mv -v "{}" "$(LOG_DIR)" \;
+	@find -name "*.log" -not -path "**/logs/*" -exec mv -vf "{}" "$(LOG_DIR)" \;
 
 
 #####################################################################################
