dmot-servlet-javax uses the current version of dmot-core in pom.xml

--- a/libdmotservices/java/dmot-servlet-javax/pom.xml
+++ b/libdmotservices/java/dmot-servlet-javax/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>dev.dmotservices</groupId>
             <artifactId>libdmotservices-core</artifactId>
-            <version>1.0.0</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 </project>
