--- a/wifiequ/Makefile
+++ b/wifiequ/Makefile
@@ -120,7 +120,7 @@ example-demo: examples
 	@$(MAKE) -C linux example-demo
 
 #####################################################################################
-## housekeeping
+## Housekeeping
 #####################################################################################
 clean:
 	@$(MILESTONE) "Removing previous builds..."
@@ -128,7 +128,7 @@ clean:
 	@rm -Rf "$(DIST)"
 
 #####################################################################################
-## documentation helpers
+## Documentation helpers
 #####################################################################################
 
 $(DOC_DIR_API):
