--- a/wifiequ/linux/Makefile
+++ b/wifiequ/linux/Makefile
@@ -47,7 +47,7 @@ ANSI_RED        := \e[0;31m
 ANSI_RESET      := \e[0m
 
 #####################################################################################
-## default target; creates the objects
+## Build
 #####################################################################################
 all: prebuild $(BIN)
 
@@ -67,7 +67,7 @@ $(BIN): $(OBJ)
 	$(CC) $(CFLAGS) $(CPPFLAGS) -o "$(BIN_DIR)/$@" $(OBJ) $(ARCHIVE) $(LDLIBS)
 
 #####################################################################################
-## deployment
+## Deployment
 #####################################################################################
 install: setup-user deploy
 
@@ -89,7 +89,7 @@ deploy:
 	@chmod +x /usr/local/bin/$(BIN)
 
 #####################################################################################
-## builds the test cases
+## Unit tests
 #####################################################################################
 TEST_SRCS := $(wildcard tests/*.c)
 TEST_BINS := $(TEST_SRCS:.c=)
@@ -115,7 +115,7 @@ test: tests
 
 
 #####################################################################################
-## builds the examples
+## Examples
 #####################################################################################
 EX_SRCS := $(wildcard examples/*.c)
 EX_BINS := $(EX_SRCS:.c=)
@@ -141,7 +141,7 @@ example-demo: examples
 
 
 #####################################################################################
-## housekeeping
+## Housekeeping
 #####################################################################################
 clean:
 	$(RM) $(BIN_DIR)/* $(LOG_DIR)/* $(OBJ) $(LIB) $(DEPS) $(TEST_BINS) $(EX_BINS)
