--- a/pkixwebadm/Makefile
+++ b/pkixwebadm/Makefile
@@ -1,5 +1,5 @@
 #################################################
-## slideshow-server/Makefile
+## pkixwebadm/Makefile
 #################################################
 
 .PHONY: all build clean dist install example-demo prebuild test
@@ -12,13 +12,15 @@ export VERSION
 ROOT        := $(CURDIR)
 DIST_DIR    := $(ROOT)/dist
 BUILD_DIR   := $(ROOT)/build
-DIST_NAME   := slideshow-server-$(VERSION)
+DIST_NAME   := pkixwebadm-$(VERSION)
 DIST_STAGE  := $(DIST_DIR)/$(DIST_NAME)
 
 # commands
 MILESTONE    := echo === 
 PYTHON       ?= python3
 TEST_CMD     ?= $(PYTHON) -m pytest -svv
+PIP			 ?= pip
+DEPS_CMD	 ?= $(PIP) install -e .
 
 #####################################################################################
 ## Default build
@@ -26,21 +28,23 @@ TEST_CMD     ?= $(PYTHON) -m pytest -svv
 all: prebuild build
 
 prebuild:
-	@cat slideshow-server.logo
+	@cat pkixwebadm.logo
+	@$(DEPS_CMD)
+	@cp -v VERSION pkixwebadm/.version
 
 build:
 	@$(MILESTONE) "Compiling Python bytecode"
 	@rm -rf "$(BUILD_DIR)"
 	@mkdir -p "$(BUILD_DIR)"
-	@$(PYTHON) -m compileall -q -b slideshow_server slideshow-server.py
-	@find slideshow_server -name "*.pyc" -print | while IFS= read -r file; do \
+	@$(PYTHON) -m compileall -q -b pkixwebadm pkixwebadm.py
+	@find pkixwebadm -name "*.pyc" -print | while IFS= read -r file; do \
 		rel=$${file#"$(ROOT)/"}; \
 		dest="$(BUILD_DIR)/$${rel}"; \
 		dest_dir="$$(dirname "$$dest")"; \
 		mkdir -p "$$dest_dir"; \
 		mv -vf "$$file" "$$dest"; \
 	done || true
-	@[ ! -f "slideshow-server.pyc" ] || mv -vf "slideshow-server.pyc" "$(BUILD_DIR)/slideshow-server.pyc"
+	@[ ! -f "pkixwebadm.pyc" ] || mv -vf "pkixwebadm.pyc" "$(BUILD_DIR)/pkixwebadm.pyc"
 
 
 #####################################################################################
@@ -64,11 +68,10 @@ test:
 ## Distribution bundle
 #####################################################################################
 dist: clean build
-	@$(MILESTONE) "Packaging slideshow-server $(VERSION)"
+	@$(MILESTONE) "Packaging pkixwebadm $(VERSION)"
 	@mkdir -p "$(DIST_STAGE)"
-	@cp -v README.md run-demo.sh slideshow-server.py slideshow-server.css \
-		slideshow-server.html slideshow-server.js VERSION "$(DIST_STAGE)"/
-	@cp -Rv slideshow_server "$(DIST_STAGE)"/
+	@cp -v README.md pkixwebadm.py VERSION "$(DIST_STAGE)"/
+	@cp -Rv pkixwebadm "$(DIST_STAGE)"/
 	@[ ! -d "$(BUILD_DIR)" ] || cp -Rv "$(BUILD_DIR)" "$(DIST_STAGE)"/
 	@tar -czf "$(DIST_DIR)/$(DIST_NAME).tar.gz" -C "$(DIST_DIR)" "$(DIST_NAME)"
 	@$(MILESTONE) "Bundle available at $(DIST_DIR)/$(DIST_NAME).tar.gz"
@@ -85,6 +88,6 @@ example-demo:
 #####################################################################################
 clean:
 	@$(MILESTONE) "Cleaning generated files"
-	@find slideshow_server -name "*.pyc" -delete || true
-	@rm -f "slideshow-server.pyc"
+	@find pkixwebadm -name "*.pyc" -delete || true
+	@rm -f "pkixwebadm.pyc"
 	@rm -rf "$(BUILD_DIR)" "$(DIST_DIR)"
